syntax = "proto3";

option go_package = "proto/quera/pb";

message User {
    uint64 id = 1;
    string first_name = 2;
    string last_name = 3;
}